--- a/markdown_report.Rmd
+++ b/markdown_report.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ## Overview
 ***
+
 Crime Pattern Detection is one of the many applications of data mining; it
 deals with the study, analysis and understanding of crimes through discovery of pattern
 or other significative insight in data. As you might think, 
@@ -46,7 +47,7 @@ be analyzed (the frequency of crimes), and the time interval, seen as `frequency
 on the code, which is 12 since we are using monthly data, and lastly we need
 to state the start data (January 2007).
 
-```{r, echo=FALSE}
+```{r}
 # Transform the table into a vector; ts should just take a vector, it performs
 # the split into times by itself
 ts.model <- ts(c(t(pr_crime_table)), frequency = 12, start = c(2007, 1))
@@ -75,7 +76,8 @@ seasonal, trend and irregular (named `random` in the object) component.
 The seasonal trend is the common trend across all seasons (months).
 
 ```{r}
-plot(decomposition.ma$figure, type="b", xaxt="n", xlab="")
+plot(decomposition.ma$figure, type='b', xaxt='n', xlab='', ylab='Difference of murders'
+     , main='Difference of murders from the global average')
 months.names <- months(ISOdate(2007,1:12,1))
 axis(1, at=1:12, labels=months.names, las=2)
 ```
@@ -84,9 +86,7 @@ axis(1, at=1:12, labels=months.names, las=2)
 The past plot is the seasonal trend of the data. What you see in the figure is the
 generalized trend of the crime activity during a year, based on seven years of crime.
 The x-axis represent the months of the year, and the y-axis shows the difference between 
-the number of crimes, and the global average number of crimes. For example, 
-suppose that the average number of murders in a month is 20, then the average during March 
-would be 15 (20 - 15), because the March average is -5.
+the global average number of crimes, and the average number of crimes of that month.
 
 The plot shows that during the period February - April, the amount of crimes decreases
 until it reaches a global minima at -13.5. Then, on the following month, May, the
